# cqw

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cqw/: config.py  installer.py  main.py  proxy.py  qr.py  tunnel.py
tests/: conftest.py  test_cli.py  test_config.py  test_e2e.py  test_installer.py  test_integration.py  test_proxy.py
