[project]
name = "cqw"
version = "0.1.0"
description = "Cloudflare Quick Tunnel wrapper with Basic Auth reverse proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.9.0",
    "pydantic-settings>=2.14.1",
    "qrcode>=8.2",
    "rich>=15.0.0",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]

[project.urls]
Documentation = "https://github.com/likeablob/cqw"
Source = "https://github.com/likeablob/cqw"

[project.scripts]
cqw = "cqw.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cqw"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "ty>=0.0.34",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ty.rules]
invalid-parameter-default = "ignore"
missing-argument = "ignore"
